--- a/app/src/main/res/layout/transport.xml
+++ b/app/src/main/res/layout/transport.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
@@ -61,7 +61,7 @@
                     android:text="Transport Schedule" />
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
